[tool.poetry]
name = "mainpackage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
liba = {git = "https://github.com/PakitoSec/LibA.git"}
libutil = {git = "https://github.com/PakitoSec/LibUtil.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
